// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavArrow /> should render with default props 1`] = `
<button
  className="mfui-beta-nav-arrow mfui-beta-nav-arrow_theme_purple"
  disabled={false}
>
  <test-file-stub
    className="mfui-beta-nav-arrow__icon"
  />
</button>
`;

exports[`<NavArrow /> should render with props 1`] = `
<button
  className="mfui-beta-nav-arrow mfui-beta-nav-arrow_theme_dark class"
  disabled={true}
  onClick={[MockFunction]}
>
  <test-file-stub
    className="mfui-beta-nav-arrow__icon"
  />
</button>
`;
